--- a/public/assets/css/estilsInici.css
+++ b/public/assets/css/estilsInici.css
@@ -21,3 +21,40 @@ p#paragrafInici{
     width: 400px;
     margin: 10px;
 }
+
+h1#titol_llista_equips{
+    width: 50%;
+    color: blue;
+    border: 1px solid black;
+    margin: 10px auto;
+    text-align: center;
+    padding: 10px;
+    background-color: #f2e7c3;
+}
+
+
+div.caja1 > #llista_equips{
+    width: 80%;
+    border: 1px solid black;
+    margin: 10px auto;
+    text-align: center;
+    padding: 10px;
+    background-color: #f2e7c3;
+}
+
+#llista_equips {
+    list-style: none;
+    
+}
+
+#llista_equips li{
+    border: 2px solid black;
+    width: 50%;
+    margin: auto;
+    color: blue;
+    background-color: aliceblue;
+    padding: 1%;
+    display: block;
+    text-align: center;
+}
+
