--- a/templates/dades_equip.html.twig
+++ b/templates/dades_equip.html.twig
@@ -9,7 +9,7 @@
     <h1 id="titolInici">Dades de Equips {{ dades.codi }} </h1>
     <div class="caja1">
         <p id="paragrafInici">Proyecte 2n DAW <br>
-            <img class="imatgeInici" src=" {{ asset('assets/img/alegria.jpeg') }} " />
+            <img class="imatgeInici" src=" {{ asset(dades.img) }} " />
         </p>
         <div id="paragrafInici">
             <ul>
