--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,11 +63,11 @@
           <a class="nav-link" href="#">Datos</a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
-            <li><a href="#"><span>Inserir</span>
+            <li><a href=" {{ path('inserir_equip') }} "><span>Inserir</span>
               <ul>
-                  <li><a href="#">Equip</a></li>
-                  <li><a href="#">Multiples Equips</a></li>
-                  <li><a href="#">Membre</a></li>
+                  <li><a href="{{ path('inserir_equip') }}">Equip</a></li>
+                  <li><a href="{{ path('inserir_equips') }}">Multiples Equips</a></li>
+                  <li><a href="{{ path('inserir_membre') }}">Membre</a></li>
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>  
               </ul>
