--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,7 +65,7 @@
             <li><a href="#">Drop Down 1</a></li>
             <li><a href=" {{ path('inserir_equip') }} "><span>Inserir</span>
               <ul>
-                  <li><a href="{{ path('inserir_equip') }}">Equip</a></li>
+                  <li><a href="{{ path('nou_equip') }}">Equip</a></li>
                   <li><a href="{{ path('inserir_equips') }}">Multiples Equips</a></li>
                   <li><a href="{{ path('inserir_membre') }}">Membre</a></li>
                   <li><a href="#">Deep Drop Down 4</a></li>
