--- a/templates/editar_membre.html.twig
+++ b/templates/editar_membre.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Añadir equipo{% endblock %}
+{% block title %}Editar Membre{% endblock %}
 {% block stylesheets %}
 {{ parent() }}
  <link href="{{ asset('assets/css/estilsEquips.css') }}" rel="stylesheet">
@@ -11,13 +11,16 @@
     {% if error %}
         <div class="exception">{{error}}</div>
     {% endif %}
-    <h1 id="titolInici">Nou Membre</h1>
+    <h1 id="titolInici">Editar Membre</h1>
     <div id="paragrafInici">
         {{ form_start(formulari) }}
         {{ form_widget(formulari) }}
         {{ form_end(formulari) }}
     </div>
-    <div id="paragrafInici">
+    <div id="paragrafInici">  
+        <img class="imatgeInici" src="{{ asset('assets/img/membres/'~imatge) }}">
+    </div>
+    <div id="paragrafInici">  
         <a class="nav-link" href ="{{ path('inici') }}">Tornar a l'inici</a>
     </div>
 {% endblock %}
