Classes Formularis I Bootstrap Jaume

--- a/templates/nou_equip.html.twig
+++ b/templates/nou_equip.html.twig
@@ -10,6 +10,7 @@
 {% block body %}
     <h1 id="titolInici">Nou equip</h1>
     <div id="paragrafInici">
+        {{ form(form) }}
         {{ form_start(formulari) }}
         {{ form_widget(formulari) }}
         {{ form_end(formulari) }}
