--- a/templates/inici.html.twig
+++ b/templates/inici.html.twig
@@ -14,6 +14,10 @@
     <h1 id="titol_llista_equips">Llistat d'equips</h1>
     <div class="caja1">
         <div id="llista_equips">
+            <div id="paragrafSecundari"> 
+                <img id="logo_avatar" src="{{ asset('assets/img/avatar.png')}}">
+                <a href=" {{ path('nou_membre')}} ">Nou membre d'Equip</a>
+            </div>
         {% if equips %}
             {% for eq in equips %}
                 <div id="equipos">
